Refactor answer endpoints into a seperate answer controller
