# constants/routes.go
@@ -15,21 +15,23 @@ const (
 	UpdateUserRoute         = UsersBaseRoute
 	GetUsersQuestionsRoute  = UsersBaseRoute + "/{id}/questions"
 
-	QuestionsBaseRoute             = ApiRoot + "/questions"
-	GetQuestionsRoute              = QuestionsBaseRoute
-	GetQuestionByIdRoute           = QuestionsBaseRoute + "/{id}"
-	CreateQuestionRoute            = QuestionsBaseRoute
-	DeleteQuestionRoute            = QuestionsBaseRoute + "/{id}"
-	LikeQuestionRoute              = QuestionsBaseRoute + "/{id}/like"
-	LikeQuestionUndoRoute          = QuestionsBaseRoute + "/{id}/like/undo"
-	DislikeQuestionRoute           = QuestionsBaseRoute + "/{id}/dislike"
-	DislikeQuestionUndoRoute       = QuestionsBaseRoute + "/{id}/dislike/undo"
-	GetQuestionAnswersRoute        = QuestionsBaseRoute + "/{id}/answers"
-	CreateQuestionAnswerRoute      = QuestionsBaseRoute + "/{id}/answers"
-	UpdateQuestionAnswerRoute      = QuestionsBaseRoute + "/{id}/answers/{answer_id}"
-	DeleteQuestionAnswerRoute      = QuestionsBaseRoute + "/{id}/answers/{answer_id}"
-	LikeQuestionAnswerRoute        = QuestionsBaseRoute + "/{id}/answers/{answer_id}/like"
-	LikeQuestionAnswerUndoRoute    = QuestionsBaseRoute + "/{id}/answers/{answer_id}/like/undo"
-	DislikeQuestionAnswerRoute     = QuestionsBaseRoute + "/{id}/answers/{answer_id}/dislike"
-	DislikeQuestionAnswerUndoRoute = QuestionsBaseRoute + "/{id}/answers/{answer_id}/dislike/undo"
+	QuestionsBaseRoute        = ApiRoot + "/questions"
+	GetQuestionsRoute         = QuestionsBaseRoute
+	GetQuestionByIdRoute      = QuestionsBaseRoute + "/{id}"
+	CreateQuestionRoute       = QuestionsBaseRoute
+	DeleteQuestionRoute       = QuestionsBaseRoute + "/{id}"
+	LikeQuestionRoute         = QuestionsBaseRoute + "/{id}/like"
+	LikeQuestionUndoRoute     = QuestionsBaseRoute + "/{id}/like/undo"
+	DislikeQuestionRoute      = QuestionsBaseRoute + "/{id}/dislike"
+	DislikeQuestionUndoRoute  = QuestionsBaseRoute + "/{id}/dislike/undo"
+	GetQuestionAnswersRoute   = QuestionsBaseRoute + "/{id}/answers"
+	CreateQuestionAnswerRoute = QuestionsBaseRoute + "/{id}/answers"
+
+	AnswerBaseRoute        = ApiRoot + "/answers"
+	UpdateAnswerRoute      = AnswerBaseRoute + "/{id}"
+	DeleteAnswerRoute      = AnswerBaseRoute + "/{id}"
+	LikeAnswerRoute        = AnswerBaseRoute + "/{id}/like"
+	LikeAnswerUndoRoute    = AnswerBaseRoute + "/{id}/like/undo"
+	DislikeAnswerRoute     = AnswerBaseRoute + "/{id}/dislike"
+	DislikeAnswerUndoRoute = AnswerBaseRoute + "/{id}/dislike/undo"
 )
